# WEB_modul_02_05

./: main.py  pyproject.toml  websocket_client.py
env/: pyvenv.cfg
